src/test/deca/context/invalid/provided/affect-incompatible.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 01/01/2020

{
   float b = 4;
   int a = 0;
   // Doit etre refuse.
   a = b;
}
